--- a/index.css
+++ b/index.css
@@ -1,5 +1,74 @@
+body {
+    background-color: white;
+    margin: 0.3em 0;
+}
+.intro {
+    text-align: justify;
+    vertical-align: top;
+    width: 70%;
+    font-size: 150%;
+    margin: 0 auto;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+    padding: .5em 1em;
+    padding-top: 0.5em;
+    padding-right: 1em;
+    padding-bottom: 0.5em;
+    padding-left: 1em;
+
+}
 .main-content {
+    width: 80%;
+    margin: 1.5em auto;
+    margin-top: 1.5em;
+    margin-right: auto;
+    margin-bottom: 1.5em;
+    margin-left: auto;
+    text-align: left;
+    vertical-align: middle;
     display: flex;
     flex-wrap: wrap;
-    width: 75vw;
+}
+.main {
+    flex-shrink: 2;
+    flex-grow: 2;
+}
+.footer {
+    clear: both;
+    text-align: center;
+    width: 70%;
+    margin: 10px auto;
+    margin-top: 10px;
+    margin-right: auto;
+    margin-bottom: 10px;
+    margin-left: auto;
+    border-top: .5px solid #aaa;
+    border-top-width: 0.5px;
+    border-top-style: solid;
+    border-top-color: rgb(170, 170, 170);
+}
+.nowrap {
+    white-space: nowrap;
+}
+.footer ul {
+    list-style: none;
+}
+ul {
+    display: block;
+    padding: 0;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    margin: 0 10px;
+    margin-top: 0px;
+    margin-right: 10px;
+    margin-bottom: 0px;
+    margin-left: 10px;
+    
+}
+.footer li {
+    display: inline;
 }
